--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/order/order",
     "pages/profile/profile",
     "pages/01_register_page/index.js",
-    "pages/02_common_cpns/index.js"
+    "pages/02_common_cpns/index.js",
+    "pages/03_wxss/index.js"
   ],
   "window": {
     "backgroundTextStyle": "light",
