--- a/project.config.json
+++ b/project.config.json
@@ -18,7 +18,7 @@
     "minified": true,
     "autoAudits": false,
     "newFeature": false,
-    "uglifyFileName": false,
+    "uglifyFileName": true,
     "uploadWithSourceMap": true,
     "useIsolateContext": true,
     "nodeModules": false,
@@ -37,7 +37,8 @@
       "ignore": [],
       "disablePlugins": [],
       "outputPath": ""
-    }
+    },
+    "ignoreUploadUnusedFiles": true
   },
   "compileType": "miniprogram",
   "libVersion": "2.19.4",
