--- a/app.json
+++ b/app.json
@@ -12,8 +12,17 @@
     "pages/06_event/index.js",
     "pages/07_component/index.js",
     "pages/08_slot/index.js",
-    "pages/09_api_network/index.js"
+    "pages/09_api_network/index.js",
+    "pages/10_API/index.js",
+    "pages/11_API_navigate/index.js",
+    "pages2/detail/detail",
+    "pages/12_login/index.js"
   ],
+  "permission": {
+    "scope.userLocation": {
+      "desc": "获取位置信息"
+    }
+  },
   "usingComponents": {},
   "window": {
     "backgroundTextStyle": "light",
